Temp fix for messages overflow

--- a/web/src/scss/_room.scss
+++ b/web/src/scss/_room.scss
@@ -105,7 +105,7 @@ $height-avatar-collapsed: auto;
 }
 
 .up-room-panel__messages {
-
+  overflow-x: hidden !important; // @todo fix
 }
 
 /******************************************************************************
